test/1.4/errors/T_ENCONST.dml
/*
  © 2021-2024 Intel Corporation
  SPDX-License-Identifier: MPL-2.0
*/
dml 1.4;

device test;

inline method inlined_const(bool x, inline y) {
    // typed args are always considered non-constant
    // no error
    #if (y) {}
    /// ERROR ENCONST
    #if (x) {}
}

method init() {
    local int i;
    /// ERROR ENCONST
    #if (i == 0) {
    }

    /// ERROR ENCONST
    i = i == 0 #? 1 #: 2;

    inlined_const(true, true);
}
